feat: add MySQL FULLTEXT search with date range and pagination metadata
- Use MATCH AGAINST in NATURAL LANGUAGE MODE for keyword search
- ContentMapper.xml with searchFulltext and searchFulltextCount queries
- LIKE fallback for H2 compatibility
- Add startDate/endDate params for date range filtering
- Add SearchResult DTO with totalCount, totalPages, currentPage, pageSize
- HomePage: date range picker with month shortcuts
- HomePage: search result count display and pagination controls

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>